[project]
name = "goit-algo2-hw-10"
version = "0.1.0"
description = ""
authors = [
    {name = "Maryna Kindras",email = "140345218+MarynaKindras@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "matplotlib (>=3.10.5,<4.0.0)",
    "colorama (>=0.4.6,<0.5.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
